--- a/style.css
+++ b/style.css
@@ -27,9 +27,9 @@ p {
 .hero {
     /* border: 4px solid blueviolet; */
     min-height: 600px;
+    background-image: url(img/herobg.jpg);
     background-color: rgb(65, 62, 62);
     background-blend-mode: multiply;
-    background-image: url("img/herobg.jpg");
     background-position: center center;
     background-size: cover;
 }
