--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@ h1, p {
 
 h1 {
     font-size: 3rem;
-    font-weight: 800;
+    font-weight: 900;
     color: #fff;
 }
 
@@ -35,7 +35,7 @@ p {
 }
 
 .container {
-    border: 4px solid green;
+    /* border: 4px solid green; */
     display: flex;
     width: 80%;
     margin: 0 auto;
@@ -56,7 +56,7 @@ p {
 button{
     margin-top: 10px;
     margin-right: 10px;
-    padding: 10px 20px;
+    padding: 10px 10px;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-family: "Roboto" sans-serif;
@@ -86,7 +86,6 @@ button:hover {
 
 .sectioncontainer {
     /* border: 4px solid green; */
-    display: flex;
     width: 80%;
     margin: 0 auto;
     padding: 3em 0em;
@@ -96,7 +95,8 @@ button:hover {
     /* border: 4px solid blueviolet; */
     text-align: center;
     display: flex;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: space-around;
     /*flex grow set the width into maximum of 100% kapag naka display flex ka lang kasi, naka max width lang sa content mo*/
     flex-grow: 1;
     align-items: flex-start;
@@ -104,8 +104,10 @@ button:hover {
 
 .services__content {
     /* border: 4px solid blue; */
+    
+    
     max-width: 250px;
-    padding: 40px 0px;
+    padding: 40px 10px;
 }
 
 .services p {
@@ -131,7 +133,7 @@ button:hover {
 
 .serviceslogo {
     align-self: flex-start;
-    height: auto;
+    /* height: auto; */
 }
 
 .serviceslogo img {
