--- a/style.css
+++ b/style.css
@@ -53,6 +53,8 @@ p {
     box-shadow: 10px 10px 15px gray;
 }
 
+
+
 button{
     margin-top: 10px;
     margin-right: 10px;
@@ -144,4 +146,14 @@ button:hover {
 .servicestext {
     /* border: 4px solid rgb(196, 3, 35);  */
     margin-top: 20px;
+}
+
+.section h2 {
+    margin-top: 20px;
+    color: #343538;
+    font-family: "Roboto", sans-serif;
+    margin-bottom: 10px;
+    width: 100%;
+    margin: 0 auto;
+    text-align: center;
 }
