--- a/style.css
+++ b/style.css
@@ -120,7 +120,7 @@ button:hover {
     /* border: 4px solid blueviolet; */
     text-align: center;
     display: flex;
-    flex-wrap: wrap;
+    /* flex-wrap: wrap; */
     justify-content: space-around;
     /*flex grow set the width into maximum of 100% kapag naka display flex ka lang kasi, naka max width lang sa content mo*/
     flex-grow: 1;
@@ -163,7 +163,8 @@ button:hover {
 
 .serviceslogo img {
     /* border: 4px solid rgb(196, 3, 35); */
-    width: 100%;
+    align-items: flex-start;
+    height: 200px;
 }
 
 .servicestext {
@@ -171,12 +172,52 @@ button:hover {
     margin-top: 20px;
 }
 
-.section h2 {
-    margin-top: 20px;
+.sectionrow {
+    display: flex;
+    justify-content: space-around;
+    
+}
+
+.sectioncol {
+    width: 100%;
+    padding: 4em 1.25em;
+}
+
+.h2titles {
     color: #343538;
     font-family: "Roboto", sans-serif;
-    margin-bottom: 10px;
-    width: 100%;
-    margin: 0 auto;
     text-align: center;
+    text-transform: uppercase;
+    margin: 0 auto;
+}
+
+.aboutimage {
+    align-items: flex-start;
+}
+
+
+.aboutimage img {
+    width: 100%;
+    box-shadow: 10px 10px 15px gray;;
+}
+
+
+.sectioncol p {
+    font-weight: 400;
+    color: #343538;
+    font-size: 1.2rem;
+    letter-spacing: 1px;
+    margin: 0 auto;
+}
+
+.textemp {
+    color: #da251c;
+    font-weight: 700;
+    font-size: 2.5rem;
+}
+
+.textemp2 {
+    color: #da251c;
+    font-weight: 700;
+    font-size: 1.5rem;
 }
