--- a/style.css
+++ b/style.css
@@ -49,7 +49,7 @@ p {
 }
 
 .herocontent img {
-    width: 100%;
+    max-width: 100%;
     box-shadow: 10px 10px 15px gray;
 }
 
@@ -113,7 +113,7 @@ button:hover {
     /* border: 4px solid green; */
     width: 80%;
     margin: 0 auto;
-    padding: 3em 0em;
+    padding-top: 5em;
 }
 
 .services {
@@ -125,6 +125,7 @@ button:hover {
     /*flex grow set the width into maximum of 100% kapag naka display flex ka lang kasi, naka max width lang sa content mo*/
     flex-grow: 1;
     align-items: flex-start;
+    padding-top: 1em;
 }
 
 .services__content {
@@ -164,6 +165,7 @@ button:hover {
 .serviceslogo img {
     /* border: 4px solid rgb(196, 3, 35); */
     align-items: flex-start;
+    max-width: 100%;
     height: 200px;
 }
 
@@ -186,6 +188,8 @@ button:hover {
 .h2titles {
     color: #343538;
     font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-size: 2rem;
     text-align: center;
     text-transform: uppercase;
     margin: 0 auto;
@@ -197,7 +201,7 @@ button:hover {
 
 
 .aboutimage img {
-    width: 100%;
+    max-width: 100%;
     box-shadow: 10px 10px 15px gray;;
 }
 
