--- a/style.css
+++ b/style.css
@@ -42,27 +42,36 @@ p {
     width: 80%;
     margin: 0 auto;
     padding: 0;
-    border: 4px solid saddlebrown;
+    /* border: 4px solid saddlebrown; */
 }
 
+.logo {
+    text-decoration: none; /*removes the underline in title h2*/
+}
 
 .logo img {
     margin-right: 1em; /*add margin on right of logo */
+}
+
+.companytitle {
+    font-family: "Roboto", sans-serif;
+    color: #424642;
 }
 
 .row {
     display: flex;
     align-items: center;
     justify-content: space-between;
-    border: 4px solid rebeccapurple;
+    padding: .25em 0em;
+    /* border: 4px solid rebeccapurple; */
 }
 
 
 .nav {
     display: flex;
-    margin: 0 auto;
+    margin-left: auto; /* Pushes the navigation to the far right*/
     padding: 0;
-    border: 4px solid saddlebrown;
+    /* border: 4px solid saddlebrown; */
 }
 
 .nav__list {
@@ -70,23 +79,35 @@ p {
     padding: 0;
     list-style: none; /*removes the dots in ul */
     display: flex; /* makes the nav__item or li to become row */
-    border: 4px solid yellow;
+    /* border: 4px solid yellow; */
 }
 
 .nav__item {
-    margin-right: 2em; /*creates space on right of every li*/
-
+    margin-left: 2em; /*creates space on left of every li*/
+    font-family: "Roboto", sans-serif;
+    font-weight: 900;
+    font-size: 1rem;
 }
+
 
 .nav__link {
     text-transform: uppercase;
     text-decoration: none; /*removes underline in the li*/
+    color: #424642;
+    letter-spacing: 0.15em;
+}
+
+.nav__link:hover {
+    border-bottom: solid 3px;
+    border-color: #343538;
+    color: #da251c;
 }
 
 
 
+
 .container {
-    border: 4px solid green;
+    /* border: 4px solid green; */
     display: flex;
     width: 80%;
     margin: 0 auto;
