--- a/style.css
+++ b/style.css
@@ -23,7 +23,6 @@ p {
     font-size: 1.5rem;
     color: #fff;
     font-weight: 400;
-    letter-spacing: 2px;
 }
 
 
@@ -131,6 +130,16 @@ p {
     flex-grow: 1;
 }
 
+.herotextcontent p {
+    line-height: 1.4;
+    font-size: 2.5rem;
+}
+
+.herotextcontent h1 {
+    line-height: 1.2;
+    font-size: 4rem;
+}
+
 .herocontent img {
     max-width: 100%;
     box-shadow: 10px 10px 15px gray;
@@ -164,11 +173,12 @@ p {
 button{
     margin-top: 10px;
     margin-right: 10px;
-    padding: 10px 10px;
+    padding: 20px 40px;
     text-transform: uppercase;
     letter-spacing: 2px;
     font-family: "Roboto" sans-serif;
     font-weight: 800;
+    font-size: 1rem;
     background-color: #fff;
     /* background-color: #da251c; */
     color: black;
@@ -268,6 +278,7 @@ button:hover {
 .sectionrow {
     display: flex;
     justify-content: space-around;
+    padding-bottom: 2em;
     
 }
 
@@ -281,10 +292,11 @@ button:hover {
     color: #343538;
     font-family: "Roboto", sans-serif;
     font-weight: 900;
-    font-size: 2rem;
+    font-size: 2.5rem;
     text-align: center;
     text-transform: uppercase;
     margin: 0 auto;
+    padding: 1em 0em;
 }
 
 .aboutimage {
@@ -303,7 +315,7 @@ button:hover {
     font-weight: 400;
     color: #343538;
     font-size: 1.2rem;
-    letter-spacing: 1px;
+    line-height: 1.6;
     margin: 0 auto;
 }
 
@@ -334,7 +346,7 @@ button:hover {
     color: #fff;
     font-family: "Roboto", sans-serif;
     font-weight: 900;
-    font-size: 2rem;
+    font-size: 2.5rem;
     text-align: center;
     text-transform: uppercase;
     margin: 0 auto;
@@ -418,25 +430,40 @@ button:hover {
 
 .footersection {
     background-color: #2f3033;
-    border: 4px solid green;
+    /* border: 4px solid green; */
 }
 
 
 .footercontainer {
     width: 80%;
     margin: 0 auto;
-    padding: 1em 0em;
-    border: 4px solid rgb(196, 3, 35); 
+    padding: 3em 0em;
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    text-align: center;
+    /* border: 4px solid rgb(196, 3, 35);  */
 }
 
 .footerrow {
-    border: 4px solid violet;
-    display: flex;
-    flex-grow: 1;
 }
 
-.footercol {
-    border: 4px solid gold;
+.footertitle{
+    font-family: "Roboto", sans-serif;
+    color: rgb(202, 199, 199);
+    font-size: 1rem;
+    font-weight: 200;
+}
+
+.footertext {
+    color: rgb(202, 199, 199);
+    font-size: 1rem;
+    padding: 0.5em 0em;
+}
+
+.footercol img {
+    mix-blend-mode: multiply;
+    z-index: 10;
 }
 
 
