--- a/style.css
+++ b/style.css
@@ -52,6 +52,8 @@ p {
     /* border: 4px solid saddlebrown; */
 }
 
+
+
 .logo {
     text-decoration: none; /*removes the underline in title h2*/
 }
@@ -109,6 +111,27 @@ p {
     border-color: #343538;
     color: #da251c;
 }
+
+/*Navigation Button*/
+.toggle-button {
+    position: absolute;
+    top: 50px;
+    right: 5%;
+    display:none;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 21px;
+}
+
+.bar {
+    height: 3px;
+    width: 100%;
+    background-color: #424642;
+    border-radius: 10px;
+}
+
+
 
 
 
@@ -446,9 +469,6 @@ button:hover {
     /* border: 4px solid rgb(196, 3, 35);  */
 }
 
-.footerrow {
-}
-
 .footertitle{
     font-family: "Roboto", sans-serif;
     color: #fff;
@@ -536,9 +556,23 @@ button:hover {
           width: 95%;
       }
 
-      .nav {
+      .nav__list {
+          flex-direction: column;
+          width: 100%;
           display: none;
       }
+
+
+      .nav__list.active {
+          display: flex;
+      }
+
+      .nav__item {
+          text-align: center;
+          margin: 0;
+          padding: .5em 0em;
+      }
+
 
       .companytitle {
           display:none;
@@ -551,4 +585,9 @@ button:hover {
           font-size: 2rem;
       }
 
+      .toggle-button {
+        display: flex;
+    }
   }
+
+  
